Update to build tools 29.0.2 + Github Actions CI